# csprite

./: .gitattributes  .gitignore  .gitmodules  AppImage-Builder.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  INTERNALS.md  LICENSE  Makefile  README.md  SConstruct  SECURITY.md  build.sh  common_defs.cmake  common_defs.txt  config.mk  genInl.sh  genRes.bat  generateFont.sh  shader.fs  shader.vs  windows.rc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  codeql.yml  continous.yml  nightly.yml  stable.yml
assets/languages/: english.json  german.json  maltese.json  polish.json
data/: Info.plist  csprite.desktop  csprite.exe.manifest  english.ini  windows.rc  windows.rc.template
data/gui/: menu.xml
data/languages/: German.ini  Maltese.ini  english.ini  german.json  maltese.json
data/palettes/: 1bit-monitor-glow.csv  bittersweet16.csv  cc-29.csv  dawnbringers-8-color.csv  duolingo-flags.csv  funkyfuture-8.csv  galactic-greens.csv  gb-remixed-2bit.csv  lavendertown.csv  megaman-v-sgb.csv  metallic-gb.csv  oceans-seven.csv  pear36.csv  playful-28.csv  sweetie-16.csv  twilight-5.csv
data/scripts/: cdefs.lua  main.lua
data/shaders/: fragment.glsl  fragment_33.glsl  vertex.glsl  vertex_33.glsl
data/themes/: NoiceBlue.ini  blueblue.ini  redred.ini
docs/: csprite-file-specs-v1.md
include/: FontMontserrat_Bold.h  FontMontserrat_Bold.inl  ProgramIcon16.inl  ProgramIcon32.inl  ProgramIcon48.inl  cconfig.h  math_linear.h  pfd.h
include/KHR/: khrplatform.h
include/glad/: glad.h
lib/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  font2inl.cpp  glad.c  image2inl.c  platform_folders.cpp  tinyfiledialogs.c
lib/downloader/: downloader.c  downloader.h
lib/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_tables.cpp  imgui_widgets.cpp
lib/ini/: ini.h
lib/log/: log.h
lib/tfd/: Makefile  README.md  README.txt
lib/tfd/.github/workflows/: ci.yml
lib/tfd/examples/: hello.c  hello_wchar_t.c
lib/tfd/src/: tinyfiledialogs.c  tinyfiledialogs.h
libs/FileBrowser/: ImGuiFileBrowser.cpp
libs/imgooeystyles/: imgui_styles.cpp
libs/ini/: ini.c  ini.h
libs/log/: log.c
libs/tfd/: tinyfiledialogs.c
src/: _GuiImpl.h  assets.c  assets.h  canvas.c  canvas.h  config.c  config.cpp  config.h  config.hpp  glad.c  helpers.cpp  helpers.h  helpers.hpp  history.c  history.cpp  history.h  icon.h  imgui_extension.cpp  imgui_extension.h  impl.c  log.hpp  logger.cpp  logger.h  macros.h  main.bak  main.c  main.cpp  main.h  main.hpp  math_linear.h  mouse.cpp  mouse.h  ogl_wrapper.c  ogl_wrapper.h  palette.c  palette.cpp  palette.h  palette.hpp  pixel.h  save.h  (+22 more)
src/api/: api.cpp  api.h  cimgui.cpp  cimgui.h
src/app/: app.c  app.cc  app.h  app.hh  app.hpp  app_impl_opengl.cpp  cmd.cpp  cmd.hpp  config.cpp  config.hpp  editor.c  editor.h  fswrapper.cpp  fswrapper.hpp  gui.c  gui.h  imgui.h  imgui_stdlib.cpp  imgui_stdlib.h  main.c  main.cpp  main.hpp  misc.cpp  misc.hpp  prefs.cpp  prefs.hpp  render.c  render.h  texture.c  texture.h  window.c  window.h
src/app/assets/: assets.c  manager.cpp  manager.hpp
src/app/i18n/: strings.cpp  strings.hpp
src/app/language/: manager.cpp  manager.hpp
src/app/language/lang/: english.lang  polish.lang
src/assets/: .gitkeep  assets.c  assets.cpp  assets.h  assets.hpp  fonts.inl  shaders.inl
src/base/: arena.c  arena.h  math.c  math.h  memory.c  memory.h  string.c  string.h  types.h
src/bitmap/: bitmap.c  bitmap.h
src/canvas/: canvas.cpp  canvas.hpp  render.cpp  render.hpp
src/cimgui/: cimgui.cpp  cimgui.h  cimgui_impl.cpp  cimgui_impl.h  impl.cpp
src/cimgui/imgui/: imgui.h
src/command/: command.hpp
src/doc/: bitmap.cpp  bitmap.hpp  doc.cpp  doc.h  doc.hpp
src/doc/parser/: parser.cpp  parser.hpp
src/filebrowser/: filebrowser.cpp  filebrowser.hpp
src/fs/: fs.c  fs.cpp  fs.h  fs.hpp
src/gfx/: gfx.c  gfx.h
src/globale/: EN_UK.ini  EN_UK.json  EN_US.json
src/ifileio/: README.md  endian.c  ifileio.c  ifileio.cpp  ifileio.h  ifileio_endian.c  ifileio_endian.cpp  ifileio_endian.h  zlib_wrapper.c  zlib_wrapper.h
src/image/: blender.cpp  blender.h  blender.hpp  image.c  image.cpp  image.h  image.hpp  parser.cpp  parser.hpp  ui.cpp  ui.hpp  writer.cpp  writer.hpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/os/: README.md  gfx.c  gfx.h  os.c  os.h  os_impl.c  os_linux.c  os_win32.c
src/os/linux/: gfx.c
src/os/win32/: gfx.c  os.c
src/palette/: palette.c  palette.cpp  palette.h  palette.hpp  parser.cpp  parser.hpp  ui.cpp  ui.hpp
src/parser/: parser.hpp
src/pixel/: pixel.cpp  pixel.h  pixel.hpp
src/platform/: platform.c  platform.h
src/raster/: gfx.c  gfx.h  math.c  math.h  raster.c  raster.h
src/renderer/: README.md  canvas.c  canvas.cpp  canvas.h  canvas.hh  canvas.hpp  canvas_.c  ogl_wrapper.c  renderer.cpp  renderer.h
src/tools/: ToolManager.cpp  ToolManager.hpp  tools.c  tools.cpp  tools.hpp  ui.cpp  ui.hpp  xy_stack.c  xy_stack.h
src/ui/: filedialog.cpp  filedialog.h  menu.cpp  menu.h  new_canvas.cpp  new_canvas.h  preferences.cpp  preferences.h  preview.cpp  preview.h
src/window/: gui.cpp  gui.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
tools/: BuildNInstall.sh  BuildNInstall_Linux.sh  BuildNInstall_LuaJIT.sh  BuildNInstall_Windows.sh  build_targz.sh  create_assets.py  create_icons.py  create_rc.py  csprite.manifest  font2inl.cpp  guigen.py  post-push.sh  validate_langfiles.py  windows.rc.template
